[project]
name = "autonomous-research-assistant"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    # Agent core
    "pydantic>=2.6",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "rich>=13.0",
    # MCP (server + client)
    "mcp[cli]>=1.0",
    # MCP server tools
    "tavily-python>=0.3",
    "duckduckgo-search>=6.0",
    "crawl4ai>=0.4",
    # llm_gatewayV3 server
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "jsonschema>=4.21",
]

[project.scripts]
research = "agent6:main"

[tool.uv]
dev-dependencies = []
